# mnist-digit-recognition-in-rust

./: Cargo.toml  README.md
src/: io.rs  main.rs  network.rs
